Fix #80021: include/require documentation does not mention warnings for missing files
git-svn-id: https://svn.php.net/repository/phpdoc/en/trunk@350405 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/control-structures/include.xml
+++ b/language/control-structures/include.xml
@@ -24,6 +24,12 @@
   <constant>E_ERROR</constant>.
  </simpara>
  <simpara>
+  Note that both <literal>include</literal> and <literal>require</literal>
+  raise additional <constant>E_WARNING</constant>s, if the file cannot be
+  accessed, before raising the final <constant>E_WARNING</constant> or
+  <constant>E_ERROR</constant>, respectively.
+ </simpara>
+ <simpara>
   If a path is defined — whether absolute (starting with a drive letter
   or <literal>\</literal> on Windows, or <literal>/</literal> on Unix/Linux
   systems) or relative to the current directory (starting with
