Fix #70702: Documentation missing to explain unexpected optimisation behaviour
git-svn-id: https://svn.php.net/repository/phpdoc/en/trunk@350429 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/basic.xml
+++ b/language/oop5/basic.xml
@@ -270,6 +270,13 @@ echo (new DateTime())->format('Y');
 ]]>
     </screen>
    </example>
+
+   <note>
+    <simpara>
+     Prior to PHP 7.1, the arguments are not evaluated if there is no constructor
+     function defined.
+    </simpara>
+   </note>
   </sect2>
   
   <sect2 xml:id="language.oop5.basic.properties-methods">
